--- a/podfile
+++ b/podfile
@@ -5,8 +5,8 @@ target 'WePeiYang' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
   pod 'Alamofire'
-  pod 'SnapKit'
-  pod 'Charts'
+  pod 'SnapKit', '~> 3.0.0'
+  pod 'Charts', '3.0.3'
   pod 'ObjectMapper'
   pod 'WMPageController', '2.3.0'
   # Pods for WePeiYang
@@ -21,4 +21,12 @@ target 'WePeiYang' do
     # Pods for testing
   end
 
+end
+
+post_install do |installer|
+    installer.pods_project.targets.each do |target|
+        target.build_configurations.each do |config|
+            config.build_settings['SWIFT_VERSION'] = '3.2'
+        end
+    end
 end
